add variable environment with dotenv-webpack

--- a/src/components/Weather/index.scss
+++ b/src/components/Weather/index.scss
@@ -16,8 +16,12 @@
     }
     
     &-image {
-        background: transparent;
-        width: 10%;
+        --bg: url('../../assets/images/sun.png');
+        background-image: var(--bg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 25%;
+        width: 30%;
         height: auto;
     }
 
